--- a/app/views/transfer_items/_transfer_item.html.erb
+++ b/app/views/transfer_items/_transfer_item.html.erb
@@ -1,4 +1,4 @@
-<% if transfer_item.receiving_team == transfer_item.transfer.primary_team %>
+<% if transfer_item.receiving_team == transfer.primary_team %>
 	<% lefty = true %>
 <% else %>
 	<% lefty = false %>
@@ -8,7 +8,7 @@
 	<% if transfer_item.transfer_item_type === "Player" %>
 		<%= transfer_item.team_player.full_name(true) %>
 	<% elsif transfer_item.transfer_item_type === "Cash" %>
-		<%= number_to_currency(transfer_item.cash_cents, precision: 0) %>
+		<%= number_to_currency(transfer_item.cash_cents, precision: 0) %> 
 	<% end %>
 	<i class="material-icons small <%= 'ghost' if lefty %>">arrow_forward</i>
 </span>
