--- a/app/views/transfers/_transfer_teams_status_row.html.erb
+++ b/app/views/transfers/_transfer_teams_status_row.html.erb
@@ -1,4 +1,4 @@
-<td class="mdl-data-table__cell--non-numeric normal-text transfer-item-cell" style="border-top:0px;">
+<td class="mdl-data-table__cell--non-numeric normal-text transfer-item-cell" style="border-top:0px;border-bottom:0px;">
   <% if transfer.primary_team_accepted %>
     <div class="green-circle"></div>
   <% else %>
@@ -6,13 +6,13 @@
   <% end %>
   <%= transfer.primary_team.title %>
 </td>
-<td class="mdl-data-table__cell--non-numeric normal-text" style="border-top:0px;">
+<td class="mdl-data-table__cell--non-numeric normal-text" style="border-top:0px;border-bottom:0px;">
   <% transfer.transfer_items.each do |transfer_item| %>
-    <%= render partial: 'transfer_items/transfer_item', locals: {transfer_item: transfer_item} %>
+    <%= render partial: 'transfer_items/transfer_item', locals: {transfer_item: transfer_item, transfer: transfer} %>
     <br/>
   <% end %>
 </td>
-<td class="mdl-data-table__cell--non-numeric normal-text transfer-item-cell" style="border-top:0px;">
+<td class="mdl-data-table__cell--non-numeric normal-text transfer-item-cell" style="border-top:0px;border-bottom:0px;">
   <% if transfer.secondary_team_accepted %>
     <div class="green-circle"></div>
   <% else %>
