--- a/app/views/team_players/show.html.erb
+++ b/app/views/team_players/show.html.erb
@@ -35,7 +35,7 @@
 							Value
 						</td>
 						<td class="mdl-data-table__cell--non-numeric normal-text">
-							<%= @team_player.player.player_value(Season.current.first) %>
+							<%= number_to_currency(@team_player.player.player_value(Season.current.first), precision:0) %>
 						</td>
 					</tr>
 					<tr>
