--- a/app/views/transfers/show.html.erb
+++ b/app/views/transfers/show.html.erb
@@ -5,90 +5,39 @@
 			<div class="mdl-card__title">
         <h2 class="mdl-card__title-text">Transfer details</h2>
       </div>
-      <div class="mdl-card__title">
-				<h3 class="mdl-card__title-text">Status</h3>
-			</div>
       <div class="mdl-card__supporting-text">
       	<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp mdl-data-table-fixed">
-						<%= render partial: 'transfer_teams_status_row', locals: {transfer: @transfer} %>
+      		<tr>
+						<%= render partial: 'transfer_teams_status_row', locals: {transfer: @transfer, league: league} %>
 					</tr>
+					<% if @transfer.current_user_involved?(@current_user) && !@transfer.transfer_completed? %>
+						<tr>
+							<td colspan="3" style="border-top:0px;">
+								<ul class="horizontal-style">
+									<li>
+										<%= render partial: 'change_transfer_status', locals: {transfer: @transfer, team: @current_user.get_team(league), league: league} %>
+									</li>
+									<li>
+				          	<%= link_to "Negotiate", edit_league_transfer_transfer_item_path(league, @transfer, @transfer.get_cash_transfer_item), class: "mdl-button--primary" %>
+				          </li>
+			          	<% if @transfer.primary_team.user == @current_user%>
+				          	<li>
+				          		<%= link_to "Cancel", league_transfer_path(league, @transfer), method: :delete, class: "mdl-button--secondary" %>
+				          	</li>
+			          	<% end %>
+								</ul>
+							</td>
+						</tr>
+					<% end %>
 				</table>
       </div>
       <div class="mdl-card__supporting-text">
 	    	<ul class="horizontal-style">
-	      	<li><%= link_to "View all transfers", league_transfers_path(league), class: "mdl-button--primary" %></li>
-      		<% if @transfer.current_user_involved?(@current_user) && !@transfer.transfer_completed? %>
-	        	<li><%= link_to "Change your status", change_response_league_transfer_path(league, @transfer), :method => :patch, class: "mdl-button--primary"  %></li>
-	          <% if @transfer.primary_team.user == @current_user && !@transfer.transfer_completed? %>
-            	<li><%= link_to "Cancel transfer", league_transfer_path(league, @transfer), :method => :delete %></li>
-            <% end %>
-          <% end %>
+	      	<li>
+	      		<%= link_to "View all transfers", league_transfers_path(league), class: "mdl-button--primary" %>
+	      	</li>
 	      </ul>
 	     </div>
     </div>
-    <div class="demo-card-wide mdl-card mdl-shadow--2dp">
-    	<div class="mdl-card__title">
-				<h3 class="mdl-card__title-text">Who gets what</h3>
-			</div>
-    	<div class="mdl-card__actions">
-				<% if @transfer.transfer_items.count > 0 %>
-					<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
-						<tr>
-							<th class="mdl-data-table__cell--non-numeric">
-								<span><%= truncate(@transfer.primary_team.title, length: 13) %></span>
-							</th>
-							<th class="mdl-data-table__cell--non-numeric">
-								<span><%= truncate(@transfer.secondary_team.title, length: 13) %></span>
-							</th>
-							<th class="mdl-data-table__cell--non-numeric">
-								<span> </span>
-							</th>
-						</tr>
-						<% @transfer.transfer_items.each do |transfer_item| %>
-							<tr>
-								<td class="mdl-data-table__cell--non-numeric normal-text">
-									<% if transfer_item.receiving_team === @transfer.primary_team %>
-							  		<% if transfer_item.transfer_item_type === "Player" %>
-							  			<%= transfer_item.team_player.full_name(true) %>
-							  			<br/>
-							  			(<%= number_to_currency(transfer_item.team_player.current_contract.weekly_salary_cents, precision: 0) %> / wk)
-							  		<% elsif transfer_item.transfer_item_type === "Cash" %>
-							  			<%= number_to_currency(transfer_item.cash_cents, precision: 0) %>
-							  		<% end %>
-						  		<%end%>
-								</td>
-								<td class="mdl-data-table__cell--non-numeric normal-text">
-								<% if transfer_item.receiving_team === @transfer.secondary_team %>
-						  		<% if transfer_item.transfer_item_type === "Player" %>
-						  			<%= transfer_item.team_player.full_name(true) %>
-						  			<br/>
-						  			(<%= number_to_currency(transfer_item.team_player.current_contract.weekly_salary_cents, precision: 0) %> / wk)
-						  		<% elsif transfer_item.transfer_item_type === "Cash" %>
-						  			<%= number_to_currency(transfer_item.cash_cents, precision: 0) %>
-						  		<% end %>
-						  	<% end %>	
-								</td>
-								<td class="mdl-data-table__cell--non-numeric normal-text">
-									<% if @transfer.transfer_completed? %>
-						  			Done deal
-						  		<% elsif @transfer.current_user_involved?(@current_user) %>
-							  		<%= link_to "Remove", league_transfer_transfer_item_path(league, @transfer, transfer_item), method: :delete %>
-							  		/
-							  		<%= link_to "Edit", edit_league_transfer_transfer_item_path(league, @transfer, transfer_item) %>
-						  		<% end %>
-								</td>
-							</tr>
-						<% end %>
-					</table>
-				<% end %>
-			</div>
-			<% if @transfer.current_user_involved?(@current_user) && !@transfer.transfer_completed? %>
-				<div class="mdl-card__supporting-text">
-	        <ul class="horizontal-style">
-	          <li><%= link_to "Add transfer item", new_league_transfer_transfer_item_path(league, @transfer), class: "mdl-button--primary" %></li>
-	        </ul>
-	      </div>
-      <% end %>
-		</div>
 	</div>
 </div>
