--- a/app/views/transfer_items/edit.html.erb
+++ b/app/views/transfer_items/edit.html.erb
@@ -2,20 +2,9 @@
 <div class="col-sm-12">
   <div class="demo-card-wide mdl-card mdl-shadow--2dp">
 		<div class="mdl-card__title">
-			<h2 class="mdl-card__title-text">Edit transfer item</h2>
+			<h2 class="mdl-card__title-text">Change bid</h2>
 		</div>
-		<div class="mdl-card__actions">
-      <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
-				<tr>
-		      <td class="mdl-data-table__cell--non-numeric normal-text">
-		        Your team budget
-		      </td>
-		      <td class="mdl-data-table__cell--non-numeric normal-text">
-		        <%= number_to_currency(@current_user.get_team(league).cash_balance_cents, precision: 0) %>
-		      </td>
-		    </tr>
-	  	</table>
-	  </div>
+		<%= render partial: 'transfer_item_player_details', locals: {team_player: @transfer_item.transfer.get_player_transfer_item.team_player, league: league} %>
 		<%= render 'form' %>
 	</div>
 </div>
