--- a/app/views/transfer_items/_form.html.erb
+++ b/app/views/transfer_items/_form.html.erb
@@ -18,19 +18,7 @@
 
   <div class="mdl-card__actions">
     <%= f.hidden_field :transfer_id, value: @transfer.id %>
-    <% if !@transfer_item.id %>
-      <div class="form-group">
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <%= f.text_field :cash_cents, pattern: "^[1-9]{1}[0-9]*$", value: params[:cash_cents], class: "mdl-textfield__input" %>
-          <%= f.label "Cash amount", class: "mdl-textfield__label" %>
-          <span class="mdl-textfield__error">Invalid amount.</span>
-        </div>
-      </div>
-      <div class="form-group">
-        <%= f.submit "Add", class: "mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" %>
-        <%= link_to "Cancel", league_transfer_path(league, @transfer), class: "cancel_link_anchor" %>
-      </div>
-    <% else %>
+    <% if @transfer_item.id %>
       <div class="form-group">
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
           <%= f.text_field :cash_cents, pattern: "^[1-9]{1}[0-9]*$", value: @transfer_item.cash_cents, class: "mdl-textfield__input" %>
