--- a/app/views/team_players/show.html.erb
+++ b/app/views/team_players/show.html.erb
@@ -75,6 +75,9 @@
 			<div class="mdl-card__supporting-text">
 				<ul class="horizontal-style">
 					<li>
+						<%= link_to "Transfer list", edit_league_team_team_player_path(@team.league, @team, @team_player), class: "mdl-button--secondary" %>
+					</li>
+					<li>
 						<%= link_to "Pay #{number_to_currency(@team_player.current_contract.release_value, precision: 0)} to release player", release_league_team_team_player_path(@team.league, @team, @team_player), method: :patch, class: "mdl-button--secondary" %>
 					</li>
 				</ul>
@@ -82,6 +85,6 @@
 		</div>
 		<div class="demo-card-wide mdl-card mdl-shadow--2dp">
 			<%= render partial: 'shared/player_game_week_table', locals: {player: @team_player.player} %>
-		</div>		
+		</div>
 	</div>
 </div>
