--- a/app/views/team_players/show.html.erb
+++ b/app/views/team_players/show.html.erb
@@ -10,23 +10,15 @@
 						<td class="mdl-data-table__cell--non-numeric normal-text">
 							Position
 						</td>
-						<td class="mdl-data-table__cell--non-numeric normal-text">
+						<td class="mdl-data-table__cell--non-numeric normal-text" colspan="2">
 							<%= @team_player.player.playing_position %>
-						</td>
-					</tr>
-					<tr>
-						<td class="mdl-data-table__cell--non-numeric normal-text">
-							First team
-						</td>
-						<td class="mdl-data-table__cell--non-numeric normal-text">
-							<%= @team_player.first_team ? 'Yes' : 'No' %>
 						</td>
 					</tr>
 					<tr>
 						<td class="mdl-data-table__cell--non-numeric normal-text">
 							Team
 						</td>
-						<td class="mdl-data-table__cell--non-numeric normal-text">
+						<td class="mdl-data-table__cell--non-numeric normal-text" colspan="2">
 							<%= link_to @team_player.team.title, league_team_path(@team.league, @team), class: "content-link" %>
 						</td>
 					</tr>
@@ -35,24 +27,33 @@
 							Value
 						</td>
 						<td class="mdl-data-table__cell--non-numeric normal-text">
-							<%= number_to_currency(@team_player.player.player_value(Season.current.first), precision:0) %>
+							<%= number_to_currency(@team_player.player.player_value(Season.current.first), precision:0) %> <%= @team_player.transfer_minimum_bid ? "(listed for #{number_to_currency(@team_player.transfer_minimum_bid, precision:0)})" : '' %>
 						</td>
+						<% if @team_player.transfer_minimum_bid %>
+							<td class="mdl-data-table__cell--non-numeric normal-text">
+								<%= form_for @team_player, url: league_team_team_player_path(@team.league, @team, @team_player), action: :patch do |f| %>
+									<%= f.hidden_field :is_voluntary_transfer, value: false %>
+									<%= f.hidden_field :transfer_completes_at, value: nil %>
+									<%= f.hidden_field :transfer_minimum_bid, value: nil %>
+									<%= f.submit "De-list", class: "negative_action_button" %>
+								<% end %>
+							</td>
+						<% end %>
 					</tr>
 					<tr>
 						<td class="mdl-data-table__cell--non-numeric normal-text">
 							Salary
 						</td>
 						<td class="mdl-data-table__cell--non-numeric normal-text">
-							<%= number_to_currency(@team_player.current_contract.weekly_salary_cents, precision: 0) %> 
-							(Release cost: <%= number_to_currency(@team_player.current_contract.release_value, precision: 0) %>)
+							<%= number_to_currency(@team_player.current_contract.weekly_salary_cents, precision: 0) %>
 						</td>
 					</tr>
 					<tr>
 						<td class="mdl-data-table__cell--non-numeric normal-text">
-							Contract term
+							Contract
 						</td>
-						<td class="mdl-data-table__cell--non-numeric normal-text">
-							<%= @team_player.current_contract.starts_at.strftime("%d %b %y") %> - <%= @team_player.current_contract.ends_at.strftime("%d %b %y") %>
+						<td class="mdl-data-table__cell--non-numeric normal-text" colspan="2">
+							<%= @team_player.current_contract.starts_at.strftime("%d %b %Y") %> - <%= @team_player.current_contract.ends_at.strftime("%d %b %Y") %>
 						</td>
 					</tr>
 					<% if team_player_deadline = @team_player.player.game_week_deadline_at %>
@@ -60,7 +61,7 @@
 							<td class="mdl-data-table__cell--non-numeric normal-text">
 								Deadline
 							</td>
-							<td class="mdl-data-table__cell--non-numeric normal-text">
+							<td class="mdl-data-table__cell--non-numeric normal-text" colspan="2">
 								<%= team_player_deadline.strftime("%a %d %b, %l:%M%P %Z") %>
 								<% if Time.now <= team_player_deadline %>
 									&nbsp;(in <%= time_ago_in_words(team_player_deadline, include_seconds: true) %>)
@@ -74,12 +75,10 @@
 			</div>
 			<div class="mdl-card__supporting-text">
 				<ul class="horizontal-style">
-					<li>
-						<%= link_to "Transfer list", edit_league_team_team_player_path(@team.league, @team, @team_player), class: "mdl-button--secondary" %>
-					</li>
-					<li>
-						<%= link_to "Pay #{number_to_currency(@team_player.current_contract.release_value, precision: 0)} to release player", release_league_team_team_player_path(@team.league, @team, @team_player), method: :patch, class: "mdl-button--secondary" %>
-					</li>
+					<% if !@team_player.transfer_minimum_bid %>
+						<li><%= link_to "Set transfer price", edit_league_team_team_player_path(@team.league, @team, @team_player), class: "mdl-button--secondary" %></li>
+					<% end %>
+					<li><%= link_to "Release for #{number_to_currency(@team_player.current_contract.release_value, precision: 0)}", release_league_team_team_player_path(@team.league, @team, @team_player), method: :patch, class: "mdl-button--secondary" %></li>
 				</ul>
 			</div>
 		</div>
