Prevent low-ball bids on transfer listed players

--- a/app/views/team_players/show.html.erb
+++ b/app/views/team_players/show.html.erb
@@ -27,7 +27,7 @@
 							Value
 						</td>
 						<td class="mdl-data-table__cell--non-numeric normal-text">
-							<%= number_to_currency(@team_player.player.player_value(Season.current.first), precision:0) %> <%= @team_player.transfer_minimum_bid ? "(listed for #{number_to_currency(@team_player.transfer_minimum_bid, precision:0)})" : '' %>
+							<%= render partial: 'shared/team_players/player_value', locals: {team_player: @team_player} %>
 						</td>
 						<% if @team_player.transfer_minimum_bid %>
 							<td class="mdl-data-table__cell--non-numeric normal-text">
