--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -56,7 +56,7 @@
 								Value
 							</td>
 							<td class="mdl-data-table__cell--non-numeric normal-text">
-								<%= number_to_currency(team_player.player.player_value(Season.current.first), precision:0) %>
+								<%= render partial: 'shared/team_players/player_value', locals: {team_player: team_player} %>
 							</td>
 						</tr>
 					<% end %>
