Prevent transfer  de-listing after offers

--- a/app/views/team_players/show.html.erb
+++ b/app/views/team_players/show.html.erb
@@ -19,27 +19,10 @@
 							Team
 						</td>
 						<td class="mdl-data-table__cell--non-numeric normal-text" colspan="2">
-							<%= link_to @team_player.team.title, league_team_path(@team.league, @team), class: "content-link" %>
+							<%= link_to @team.title, league_team_path(@team.league, @team), class: "content-link" %>
 						</td>
 					</tr>
-					<tr>
-						<td class="mdl-data-table__cell--non-numeric normal-text">
-							Value
-						</td>
-						<td class="mdl-data-table__cell--non-numeric normal-text">
-							<%= render partial: 'shared/team_players/player_value', locals: {team_player: @team_player} %>
-						</td>
-						<% if @team_player.transfer_minimum_bid %>
-							<td class="mdl-data-table__cell--non-numeric normal-text">
-								<%= form_for @team_player, url: league_team_team_player_path(@team.league, @team, @team_player), action: :patch do |f| %>
-									<%= f.hidden_field :is_voluntary_transfer, value: false %>
-									<%= f.hidden_field :transfer_completes_at, value: nil %>
-									<%= f.hidden_field :transfer_minimum_bid, value: nil %>
-									<%= f.submit "De-list", class: "negative_action_button" %>
-								<% end %>
-							</td>
-						<% end %>
-					</tr>
+					<%= render partial: 'shared/team_players/player_value_rows', locals: {team_player: @team_player, team: @team} %>
 					<tr>
 						<td class="mdl-data-table__cell--non-numeric normal-text">
 							Salary
