Display offers on a player

--- a/app/views/shared/team_players/_player_value_rows.html.erb
+++ b/app/views/shared/team_players/_player_value_rows.html.erb
@@ -1,3 +1,4 @@
+<% has_offers = team_player.number_of_offers > 0 ? true : false %>
 <tr>
   <td class="mdl-data-table__cell--non-numeric normal-text">
     Value
@@ -7,7 +8,7 @@
   </td>
   <% if team_player.transfer_minimum_bid %>
     <td class="mdl-data-table__cell--non-numeric normal-text">
-      <% if team_player.number_of_offers == 0 %>
+      <% if !has_offers %>
         <%= form_for team_player, url: league_team_team_player_path(team.league, team, team_player), action: :patch do |f| %>
           <%= f.hidden_field :is_voluntary_transfer, value: false %>
           <%= f.hidden_field :transfer_completes_at, value: nil %>
@@ -20,3 +21,17 @@
     </td>
   <% end %>
 </tr>
+<% if has_offers %>
+  <tr>
+    <td class="mdl-data-table__cell--non-numeric normal-text">
+      Offers
+    </td>
+    <td class="mdl-data-table__cell--non-numeric normal-text" colspan="2">
+      <% team_player.active_transfers.each do |transfer| %>
+        <% other_team_involved = transfer.get_other_team_involved(team_player.team) %>
+        <%= link_to truncate(other_team_involved.title, length: 20), display_league_team_path(team.league, other_team_involved.id), class: "content-link" %>: <%= link_to number_to_currency(transfer.get_cash_transfer_item.cash_cents, precision: 0), league_transfer_path(team.league, transfer), class: "content-link" %>
+        <br/>
+      <% end %>
+    </td>
+  </tr>
+<% end %>
