--- a/app/views/team_players/show.html.erb
+++ b/app/views/team_players/show.html.erb
@@ -27,7 +27,7 @@
 						<td class="mdl-data-table__cell--non-numeric normal-text">
 							Salary
 						</td>
-						<td class="mdl-data-table__cell--non-numeric normal-text">
+						<td class="mdl-data-table__cell--non-numeric normal-text" colspan="2">
 							<%= number_to_currency(@team_player.current_contract.weekly_salary_cents, precision: 0) %>
 						</td>
 					</tr>
