Allow for decimals on scoring attributes

--- a/app/views/shared/_player_game_week_table.html.erb
+++ b/app/views/shared/_player_game_week_table.html.erb
@@ -79,13 +79,13 @@
 						<%= pgw.minutes_played.to_i %>
 					</td>
 					<td class="normal-text">
-						<%= pgw.goals.to_i %>
+						<%= pgw.goals.to_f %>
 					</td>
 					<td class="normal-text">
-						<%= pgw.assists.to_i %>
+						<%= pgw.assists.to_f %>
 					</td>
 					<td class="normal-text">
-						<%= pgw.goals_conceded.to_i %>
+						<%= pgw.goals_conceded.to_f %>
 					</td>
 				</tr>
 			<% end %>
