--- a/app/views/shared/games/_player_lineup_table_row.html.erb
+++ b/app/views/shared/games/_player_lineup_table_row.html.erb
@@ -9,13 +9,13 @@
     <%= player_lineup.player_game_week.minutes_played.to_i %>  
   </td>
   <td class="normal-text detailed_stats">
-    <%= player_lineup.player_game_week.goals.to_i %>
+    <%= player_lineup.player_game_week.goals.to_f %>
   </td>
   <td class="normal-text detailed_stats">
-    <%= player_lineup.player_game_week.assists.to_i %>
+    <%= player_lineup.player_game_week.assists.to_f %>
   </td>
   <td class="normal-text detailed_stats">
-    <%= player_lineup.player_game_week.goals_conceded.to_i %>
+    <%= player_lineup.player_game_week.goals_conceded.to_f %>
   </td>
   <td class="normal-text hide summary_stats">
     <%= player_lineup.get_attacking_contribution %>
