--- a/app/views/shared/_player.html.erb
+++ b/app/views/shared/_player.html.erb
@@ -7,7 +7,7 @@
 	<% if owned_by_current_user %>
 		<% player_object_status = "Owned by you" %>
 	<% else %>
-		<% player_object_status = "Owned by #{truncate(team_player.team.title, length: 13)}" %>
+		<% player_object_status = "Owned by #{truncate(team_player.team.title, length: 10)}" %>
 	<% end %>
 <% else %>
 	<% player_object = player %>
@@ -45,16 +45,33 @@
 			<div class="white-circle"></div>
 			<%= player_object_status %>
 		</td>
+		<td class="mdl-data-table__cell--non-numeric normal-text">
+			<% if team_player.transfer_listed? %>
+				<i class="material-icons large">
+					playlist_add_check
+				</i>
+			<% end %>
+		</td>
 	<% else %>
 		<td class="mdl-data-table__cell--non-numeric normal-text">
 			<div class="orange-circle"></div>
 			<%= player_object_status %>
+		</td>
+		<td class="mdl-data-table__cell--non-numeric normal-text">
+			<% if team_player.transfer_listed? %>
+				<i class="material-icons large">
+					playlist_add_check
+				</i>
+			<% end %>
 		</td>
 	<% end %>
 <% else %>
 	<td class="mdl-data-table__cell--non-numeric normal-text">
 		<div class="green-circle"></div>
 		<%= player_object_status %>
+	</td>
+	<td class="mdl-data-table__cell--non-numeric normal-text">
+			
 	</td>
 <% end %>
 
