--- a/app/views/news_items/_news_item_row.html.erb
+++ b/app/views/news_items/_news_item_row.html.erb
@@ -108,4 +108,24 @@
 			</td>
 		<% end %>	
 	</tr>
+
+	<% elsif news_item.news_item_resource_type === 'Team' %>
+	<!-- TEAM news_items -->
+	<tr>
+		<td class="mdl-data-table__cell--non-numeric normal-text" colspan="2" style="border-bottom:0px;">
+			<i class="material-icons large">money_off</i><%= news_item.created_at.strftime("%d %b") %> - <%= truncate(news_item.body, length: 36) %>
+		</td>
+		<% if resource %>
+			<td class="normal-text" style="border-bottom:0px;">
+				<%= link_to 'View', display_league_team_path(news_item.league.id, resource.id), class: "mdl-button--primary" %>
+			</td>
+		<% end %>
+	</tr>
+	<tr>
+		<% if resource %>
+			<td class="mdl-data-table__cell--non-numeric normal-text " colspan="3" style="border-top:0px;">
+				<%= "Entire #{resource.abbreviated_title(22)} squad transfer listed." %>
+			</td>
+		<% end %>	
+	</tr>
 <% end %>
