--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -12,6 +12,9 @@
 								<span>Team</span>
 							</th>
 							<th>
+								<!-- For forced transfer listing indicator -->
+							</th>
+							<th>
 								<span>Pld</span>
 							</th>
 							<th>
@@ -37,6 +40,11 @@
 										<%= link_to truncate(standings_row[:team_record].title, length: 18), display_league_team_path(@league, standings_row[:team_record]), class: "content-link" %>
 									<% else %>
 										<%= link_to truncate(standings_row[:team_record].title, length: 18), league_team_path(@league, standings_row[:team_record]), class: "content-link" %>
+									<% end %>
+								</td>
+								<td class="normal-text">
+									<% if standings_row[:team_record].has_team_players_involuntarily_listed %>
+										<i class="material-icons large">money_off</i>
 									<% end %>
 								</td>
 								<td class="normal-text"><%= standings_row[:games_played] %></td>
