--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,12 @@
 	  <meta name="theme-color" content="#ffffff">
 		<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 	  <%= csrf_meta_tags %>
+	  <!-- HEAP analytics >> -->
+	  <script type="text/javascript">
+    window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var r=t.forceSSL||"https:"===document.location.protocol,a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=(r?"https:":"http:")+"//cdn.heapanalytics.com/js/heap-"+e+".js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=["addEventProperties","addUserProperties","clearEventProperties","identify","removeEventProperty","setEventProperties","track","unsetEventProperty"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])};
+      heap.load("3003394369");
+		</script>
+		<!-- << HEAP analytics -->
 	</head>
 	<body id="body_id">
 		<div class="container" id="wide-container">
