--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -185,6 +185,23 @@ td.transfer-item-cell {
 .hidden_div {
 	display: none;
 }
+.home-page-row {
+  border-top: 5px solid rgb(139,195,74);
+  padding: 30px 0px;
+}
+.home-page-row-content{
+  font-size: 30px;
+  line-height: 43px;
+  padding: 20px 0px;
+  text-align: center;
+  width: 100%;
+}
+.home-page-row-header{
+  font-size: 40px;
+  padding: 20px 0px;
+  text-align: center;
+  width: 100%;
+}
 .horizontal-style, .horizontal-style-tabs, .horizontal-style-centre-form {
   display: table;
   padding: 0px;
