--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -85,7 +85,7 @@
 					<%= yield %>
 				</div>
 			<% else %>
-				<%= render partial: 'layouts/logged_out_rows' %>
+				<%= render partial: 'layouts/logged_out_display' %>
 			<% end %>
 		</div>
 	</body>
