--- a/app/views/news_items/index.html.erb
+++ b/app/views/news_items/index.html.erb
@@ -15,16 +15,21 @@
 							<%= link_to team.league.name, league_path(team.league), class: "content-link" %>
 						</td>
 						<td class="mdl-data-table__cell--non-numeric normal-text" style="border-bottom:0px;">
-							<% if team.get_current_game %>
-								<%= render partial: 'games/simple_matchup', locals: { game: team.get_current_game } %>
+							<% current_game = team.get_current_game %>
+							<% if current_game %>
+								<%= render partial: 'games/simple_matchup', locals: { game: current_game } %>
+							<% else %>
+								No upcoming game
 							<% end %>
 						</td>
 					</tr>
-					<tr>
-						<td class="mdl-data-table__cell--non-numeric normal-text" style="border-top:0px;" colspan="2">
-							<%= render partial: 'teams/earliest_deadline', locals: { team: team, display_distance: true } %>
-						</td>
-					</tr>
+					<% if current_game %>
+						<tr>
+							<td class="mdl-data-table__cell--non-numeric normal-text" style="border-top:0px;" colspan="2">
+								<%= render partial: 'teams/earliest_deadline', locals: { team: team, display_distance: true } %>
+							</td>
+						</tr>
+					<% end %>
 				<% end %>
 			</table>
 		</div>
