--- a/app/views/layouts/_logged_out_display.html.erb
+++ b/app/views/layouts/_logged_out_display.html.erb
@@ -4,20 +4,16 @@
           main_content: "There is more to managing a club than picking the team so why should fantasy football stop there?",
           closing_remark: "Build a team. Create a legacy." } %>
   <%= render partial: 'layouts/logged_out_row', locals: {
-          header: "Wheel and deal",
-          main_content: "Offer the best salaries. Get the best players. Earn money with gate receipts. Invest in your stadium to increase capacity. Cash-based player transfers.",
-          closing_remark: "Build a team. Create a legacy." } %>
+          header: "Player contracts",
+          main_content: "Offer the best salaries. Get the best players. Earn money with gate receipts. Invest in your stadium to increase capacity. Cash-based player transfers." } %>
   <%= render partial: 'layouts/logged_out_row', locals: {
-          header: "Talent spotting",
-          main_content: "If you spot young talent, sign them up to a multi-season contract and keep them in your squad for multiple seasons.",
-          closing_remark: "Build a team. Create a legacy." } %>
+          header: "Multi-season",
+          main_content: "If you spot young talent, sign them up to a multi-season contract and keep them in your squad for multiple seasons." } %>
   <%= render partial: 'layouts/logged_out_row', locals: {
-          header: "Realistic fixtures",
-          main_content: "Play against one opponent per week & come out with realistic scorelines. No more earning 134.7 points in a week. Three points for a win. One point for a draw. Inno-bloody-vation.",
-          closing_remark: "Build a team. Create a legacy." } %>
+          header: "Realistic scorelines",
+          main_content: "Play against one opponent per week & come out with realistic scorelines. Three points for a win. One point for a draw."} %>
   <%= render partial: 'layouts/logged_out_row', locals: {
-          header: "Defenders are people too",
-          main_content: "Sign defenders who can defend not just the lads who take the penalties or get the odd assist. Your defenders in Gaffer influence the opponent's ability to score.",
-          closing_remark: "Build a team. Create a legacy." } %>
+          header: "Let your defenders defend",
+          main_content: "Sign defenders who can defend not just the lads who take the penalties or get the odd assist. Your defenders in Gaffer influence the opponent's ability to score." } %>
 </div>
 
