--- a/app/views/news_items/_news_item_row.html.erb
+++ b/app/views/news_items/_news_item_row.html.erb
@@ -109,6 +109,7 @@
 		<% end %>	
 	</tr>
 
+<!-- TEAM news_items -->
 <% elsif news_item.news_item_resource_type === 'Team' %>
 	<% if news_item.news_item_type %>
 		<% if news_item.news_item_type === 'auto_transfer_list_squad' %>
@@ -116,7 +117,7 @@
 			<% copy = "Entire #{resource.abbreviated_title(22)} squad transfer listed." %>
 		<% elsif news_item.news_item_type === 'end_of_season_reward' %>
 			<% icon_type = "money_off" %>
-			<% copy = "Test" %>
+			<% copy = number_to_currency(news_item.body) %>
 		<% end %>
 		<%= render partial: 'news_items/news_item_row_partials/news_item_partial', locals: { news_item: news_item, resource: resource, icon_type: icon_type, link: display_league_team_path(news_item.league.id, resource.id), copy: copy } %>
 	<% end %>
