--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -71,6 +71,7 @@
 					<li><%= link_to 'Edit team', edit_league_team_path(@team.league, @team), class: "mdl-button--primary" %></li>
 					<li><%= link_to 'Transfers', league_transfers_path(@team.league), class: "mdl-button--primary" %></li>
 					<li><%= link_to 'Free agents', league_contracts_path(@team.league), class: "mdl-button--primary" %></li>
+					<li><%= link_to 'Achievements', league_team_team_achievements_path(@team.league, @team), class: "mdl-button--primary" %></li>
 				</ul>
 			</div>
 		</div>
