--- a/app/views/team_achievements/_team_achievements_table.html.erb
+++ b/app/views/team_achievements/_team_achievements_table.html.erb
@@ -1,3 +1,4 @@
+<% puts team_achievements.inspect %>
 <% if team_achievements.size > 0 %>
   <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp" style="white-space: normal;">
     <% team_achievements.each do |team_achievement| %>
