--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,9 +53,16 @@
 								<div class="col-sm-3 main-nav-item">
 					    		<%= link_to "Log out", logout_path, method: :delete %>
 					    	</div>
-							<% else %>
+							<% elsif current_user_leagues.count > 1 %>
 								<div class="col-sm-6 main-nav-item">
 									<%= link_to "Leagues", leagues_path %>
+								</div>
+								<div class="col-sm-6 main-nav-item">
+					    		<%= link_to "Log out", logout_path, method: :delete %>
+					    	</div>
+					    <% else %>
+					    	<div class="col-sm-6 main-nav-item">
+									<%= link_to "Join league", leagues_path %>
 								</div>
 								<div class="col-sm-6 main-nav-item">
 					    		<%= link_to "Log out", logout_path, method: :delete %>
