--- a/app/views/news_items/index.html.erb
+++ b/app/views/news_items/index.html.erb
@@ -1,80 +1,84 @@
 <% leagues = League.joins(:teams).where('teams.user_id = ?', @current_user.id) %>
 <% news_items = NewsItem.where(league: leagues.all.pluck(:id)).order(created_at: :desc) %>
 <div class="col-sm-12">
-	<div class="demo-card-wide mdl-card mdl-shadow--2dp">
-		<div class="mdl-card__title">
-      <h3 class="mdl-card__title-text">
-      	Upcoming game week
-      </h3>
-    </div>
-		<div class="mdl-card__actions">
-			<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
-				<% @current_user.teams.each do |team| %>
-					<tr>
-						<td class="mdl-data-table__cell--non-numeric normal-text" style="border-bottom:0px;">
-							<%= link_to team.league.name, league_path(team.league), class: "content-link" %>
-						</td>
-						<td class="mdl-data-table__cell--non-numeric normal-text" style="border-bottom:0px;">
-							<% current_game = team.get_current_game %>
-							<% if current_game %>
-								<%= render partial: 'games/simple_matchup', locals: { game: current_game } %>
-							<% else %>
-								No upcoming game
-							<% end %>
-						</td>
-					</tr>
-					<% if current_game %>
-						<tr>
-							<td class="mdl-data-table__cell--non-numeric normal-text" style="border-top:0px;" colspan="2">
-								<%= render partial: 'teams/earliest_deadline', locals: { team: team, display_distance: true } %>
-							</td>
-						</tr>
-					<% end %>
-				<% end %>
-			</table>
-		</div>
-	</div>
-
-	<% if user_league = @current_user.only_league %>
+	<% if @current_user.teams.count == 0 %>
+		<%= render partial: 'shared/league_invites/league_invites_summary' %>
+	<% else %>
 		<div class="demo-card-wide mdl-card mdl-shadow--2dp">
 			<div class="mdl-card__title">
 	      <h3 class="mdl-card__title-text">
-	      	Player search
+	      	Upcoming game week
 	      </h3>
 	    </div>
 			<div class="mdl-card__actions">
-				<%= form_tag(league_players_path(user_league), method: "get", id: "search-form") do %>
-					<div class="form-group">
-		      	<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-			    		<%= text_field_tag :search, params[:search], class: "mdl-textfield__input" %>
-			    		<%= label_tag :search, "Name, position, or team", class: "mdl-textfield__label" %>
-			    	</div>
-			    </div>
-			    <div class="form-group">
-			    	<%= submit_tag "Search", name: nil, class: "mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" %>
-			    </div>
-				<% end %>
-			</div>
-		</div>
-	<% end %>
-	<div class="demo-card-wide mdl-card mdl-shadow--2dp">
-		<div class="mdl-card__title">
-      <h3 class="mdl-card__title-text">
-      	News
-      </h3>
-    </div>
-
-    <div class="mdl-card__actions">
-    	<% fresh_news_items = news_items.where('created_at > ?', 2.weeks.ago) %>
-    	<% if fresh_news_items.count > 0 %>
-	    	<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp mdl-data-table-fixed">
-	    		<% fresh_news_items.each do |news_item| %>
-	    			<%= render partial: 'news_item_row', locals: { news_item: news_item } %>
+				<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+					<% @current_user.teams.each do |team| %>
+						<tr>
+							<td class="mdl-data-table__cell--non-numeric normal-text" style="border-bottom:0px;">
+								<%= link_to team.league.name, league_path(team.league), class: "content-link" %>
+							</td>
+							<td class="mdl-data-table__cell--non-numeric normal-text" style="border-bottom:0px;">
+								<% current_game = team.get_current_game %>
+								<% if current_game %>
+									<%= render partial: 'games/simple_matchup', locals: { game: current_game } %>
+								<% else %>
+									No upcoming game
+								<% end %>
+							</td>
+						</tr>
+						<% if current_game %>
+							<tr>
+								<td class="mdl-data-table__cell--non-numeric normal-text" style="border-top:0px;" colspan="2">
+									<%= render partial: 'teams/earliest_deadline', locals: { team: team, display_distance: true } %>
+								</td>
+							</tr>
+						<% end %>
 					<% end %>
 				</table>
-			<% else %>
-				<span class="normal-text">:-/ It's a slow news day.</span>
-			<% end %>
-    </div>
-  </div>
+			</div>
+		</div>
+
+		<% if user_league = @current_user.only_league %>
+			<div class="demo-card-wide mdl-card mdl-shadow--2dp">
+				<div class="mdl-card__title">
+		      <h3 class="mdl-card__title-text">
+		      	Player search
+		      </h3>
+		    </div>
+				<div class="mdl-card__actions">
+					<%= form_tag(league_players_path(user_league), method: "get", id: "search-form") do %>
+						<div class="form-group">
+			      	<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+				    		<%= text_field_tag :search, params[:search], class: "mdl-textfield__input" %>
+				    		<%= label_tag :search, "Name, position, or team", class: "mdl-textfield__label" %>
+				    	</div>
+				    </div>
+				    <div class="form-group">
+				    	<%= submit_tag "Search", name: nil, class: "mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" %>
+				    </div>
+					<% end %>
+				</div>
+			</div>
+		<% end %>
+		<div class="demo-card-wide mdl-card mdl-shadow--2dp">
+			<div class="mdl-card__title">
+	      <h3 class="mdl-card__title-text">
+	      	News
+	      </h3>
+	    </div>
+
+	    <div class="mdl-card__actions">
+	    	<% fresh_news_items = news_items.where('created_at > ?', 2.weeks.ago) %>
+	    	<% if fresh_news_items.count > 0 %>
+		    	<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp mdl-data-table-fixed">
+		    		<% fresh_news_items.each do |news_item| %>
+		    			<%= render partial: 'news_item_row', locals: { news_item: news_item } %>
+						<% end %>
+					</table>
+				<% else %>
+					<span class="normal-text">:-/ It's a slow news day.</span>
+				<% end %>
+	    </div>
+	  </div>
+	<% end %>
 </div>
