--- a/app/views/contracts/_form.html.erb
+++ b/app/views/contracts/_form.html.erb
@@ -63,7 +63,7 @@
       <div class="form-group">
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
           <% if !@contract.id %>
-          <%= f.date_field :ends_at, value: 2.years.from_now.strftime('%Y-%m-%d'), class: "mdl-textfield__input" %>
+          <%= f.date_field :ends_at, value: 90.days.from_now.strftime('%Y-%m-%d'), class: "mdl-textfield__input" %>
           <% else %>
           <%= f.date_field :ends_at, class: "mdl-textfield__input" %>
           <% end %>
@@ -87,7 +87,7 @@
       </div>
       <div class="form-group">
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <%= f.date_field :ends_at, value: 2.years.from_now.strftime('%Y-%m-%d'), class: "mdl-textfield__input" %>
+          <%= f.date_field :ends_at, value: 90.days.from_now.strftime('%Y-%m-%d'), class: "mdl-textfield__input" %>
           <%= f.label :ends_at, class: "mdl-textfield__label" %>
         </div>
       </div>
